--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,35 @@
-
-.container{
-  background-color: #444444;
-  color: #ffffff;
-  height: 100vh;
-  font-family: Helvetica;
-
+body{
+  background-color: #222222;
 }
 
-.age-cards{
-  margin-bottom: 12px;
+.container-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.container{
+  background-color: #333333;
+  color: #ffffff;
+  font-family: Helvetica;
+  margin: 24px;
+  padding: 18px;
+  border-radius: 24px;
+  border: solid 8px #000000;
+}
+
+.calendar{
+  font-size: 18px;
+  border: solid 2px #000000;
 }
 
 .card{
-  margin: 8px;
+  background-color: #555555;
+  color: #ffffff;
+}
+
+p{
+  font-size: 16px;
+  font-weight: bold;
 }
